updated a bunch of dois, and added workshop chi 2023 papers

--- a/papers/feick2023handredirection/index.html
+++ b/papers/feick2023handredirection/index.html
@@ -90,15 +90,22 @@
 
 <!--
 
+<h2>Video</h2>
+<style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://www.youtube.com/watch?v=HBqPnrxU0ek' frameborder='0' allowfullscreen></iframe></div>
+
 -->
 
 <h2>Materials</h2>
 <p style="margin: 0.5em 0 1em 0">
 
+	<a href="http://hcitang.org/papers/2023-vr2023-feick-handredirection.pdf"><i class="fa fa-file-pdf-o"></i> PDF File (http://hcitang.org/papers/2023-vr2023-feick-handredirection.pdf)</a><br/>
 
 
 
-	<a href=""><i class="fa fa-external-link"></i> DOI ()</a><br/>
+	<a href="https://www.youtube.com/watch?v=HBqPnrxU0ek"><i class="fa fa-film"></i> Video (https://www.youtube.com/watch?v=HBqPnrxU0ek)</a><br/>
+
+
+	<a href="https://doi.org/10.1109/VR55154.2023.00035"><i class="fa fa-external-link"></i> DOI (https://doi.org/10.1109/VR55154.2023.00035)</a><br/>
 
 </p>
 
@@ -111,7 +118,9 @@
 &nbsp;&nbsp;booktitle = {IEEE VR '23: IEEE Conference on Virtual Reality and 3D User Interfaces},<br />
 &nbsp;&nbsp;year = {2023},<br />
 &nbsp;&nbsp;type = {conference},<br />
-&nbsp;&nbsp;doi = {}<br />
+&nbsp;&nbsp;pdfurl = {http://hcitang.org/papers/2023-vr2023-feick-handredirection.pdf},<br />
+&nbsp;&nbsp;videourl = {https://www.youtube.com/watch?v=HBqPnrxU0ek},<br />
+&nbsp;&nbsp;doi = {https://doi.org/10.1109/VR55154.2023.00035}<br />
 }<br />
 </p>
 					</div>
