--- a/papers/index.html
+++ b/papers/index.html
@@ -123,6 +123,60 @@
 						
 <h1><a name="2023"></a>2023</h1>
 <ol class="bibliography"><li><section id="citation">
+    <a href="/papers/pratte2023hacklesworkshop"><span id="pratte2023hacklesworkshop">Sydney Pratte, Anthony Tang, and Lora Oehlberg. (2023). <span style="text-decoration: underline"> HACKLES: A Case Study on Using Data to Create Experiences with Wearables </span>. In <i>CHI22 Workshop: Toolkits &amp; Wearables - Developing Toolkits for Exploring Wearable Designs</i>.</span>
+
+	(Lee-Smith, Matthew and Benjamin, Jesse Josua and Desjardins, Audrey and Funk, Mathias and Odom, William and Oogjes, Doenja and Park, Young-Woo and Pierce, James and Sanches, Pedro and Tsaknaki, Vasiliki, Eds.)
+
+(workshop).</a><br />
+
+
+
+
+	<a href=" 2023-chi2023workshop-pratte-hackles.pdf"><i class="fa fa-file-pdf-o"></i></a>
+
+
+	<a href="https://materialfordesign.net/chi2023_workshop/"><i class="fa fa-sticky-note-o"></i></a>
+
+
+
+</section><a class="details" href="/papers/pratte2023hacklesworkshop/"><!-- --></a></li>
+<li><section id="citation">
+    <a href="/papers/stark2023fictionworkshop"><span id="stark2023fictionworkshop">Jessi Stark, Anthony Tang, Young-Ho Kim, Joonsuk Park, and Daniel Wigdor. (2023). <span style="text-decoration: underline"> Can AI Support Fiction Writers Without Writing For Them? </span>. In <i>CHI23 Workshop: In2Writing - The Second Workshop on Intelligent and Interactive Writing Assistants</i>.</span>
+
+	(Gero, Katy Ilonka and Chang, Minsuk and Huang, Ting-Hao ’Kenneth’ and Chung, John Joon Young and Raheja, Vipul and Wambsganss, Thiemo and Kang, Dongyeop and Lee, Mina, Eds.)
+
+(workshop).</a><br />
+
+
+
+
+	<a href=" 2023-chi2023workshop-stark-fiction-writers.pdf"><i class="fa fa-file-pdf-o"></i></a>
+
+
+	<a href="https://in2writing.glitch.me/"><i class="fa fa-sticky-note-o"></i></a>
+
+
+
+</section><a class="details" href="/papers/stark2023fictionworkshop/"><!-- --></a></li>
+<li><section id="citation">
+    <a href="/papers/li2023stargazer"><span id="li2023stargazer">Jiannan Li, Mauricio Sousa, Karthik Mahadevan, Bryan Wang, Paula Akemi Aoyagui, Nicole Yu, Angela Yang, Ravin Balakrishnan, Anthony Tang, and Tovi Grossman. (2023). <span style="text-decoration: underline">Stargazer: An Interactive Camera Robot for Capturing How-To Videos Based on Subtle Instructor Cues</span>. In <i>CHI 2023: Proceedings of the 2023 SIGCHI Conference on Human Factors in Computing Systems</i>.</span>
+
+(conference).</a><br />
+
+
+
+
+	<a href="http://hcitang.org/papers/2023-chi2023-li-stargazer.mp4"><i class="fa fa-file-pdf-o"></i></a>
+
+
+
+	<a href="http://hcitang.org/papers/2023-chi2023-li-stargazer.mp4"><i class="fa fa-film"></i></a>
+
+
+	<a href="https://doi.org/10.1145/3544548.3580896"><i class="fa fa-external-link"></i></a>
+
+</section><a class="details" href="/papers/li2023stargazer/"><!-- --></a></li>
+<li><section id="citation">
     <a href="/papers/feick2023handredirection"><span id="feick2023handredirection">Martin Feick, Kora Persephone Regitz, Anthony Tang, Tobias Jungbluth, Maurice Rekrut, and Antonio Krüger. (2023). <span style="text-decoration: underline">Investigating Noticeable Hand Redirection in Virtual Reality using Physiological and Interaction Data</span>. In <i>IEEE VR ’23: IEEE Conference on Virtual Reality and 3D User Interfaces</i>.</span>
 
 (conference).</a><br />
@@ -130,10 +184,14 @@
 
 
 
+	<a href="http://hcitang.org/papers/2023-vr2023-feick-handredirection.pdf"><i class="fa fa-file-pdf-o"></i></a>
 
 
 
-	<a href=""><i class="fa fa-external-link"></i></a>
+	<a href="https://www.youtube.com/watch?v=HBqPnrxU0ek"><i class="fa fa-film"></i></a>
+
+
+	<a href="https://doi.org/10.1109/VR55154.2023.00035"><i class="fa fa-external-link"></i></a>
 
 </section><a class="details" href="/papers/feick2023handredirection/"><!-- --></a></li>
 <li><section id="citation">
@@ -151,7 +209,7 @@
 
 
 
-	<a href=""><i class="fa fa-external-link"></i></a>
+	<a href="https://doi.org/10.1145/3569009.3573899"><i class="fa fa-external-link"></i></a>
 
 </section><a class="details" href="/papers/pratte2023designspace/"><!-- --></a></li></ol>
 
@@ -183,11 +241,13 @@
 
 
 	<a href=" http://hcitang.org/papers/2022-uist2022poster-feick-hapticpuppet.mp4"><i class="fa fa-film"></i></a>
-	<a href="https://doi.org/ 10.1145/3526114.3558694"><i class="fa fa-external-link"></i></a>
+
+
+	<a href="https://doi.org/10.1145/3526114.3558694"><i class="fa fa-external-link"></i></a>
 
 </section><a class="details" href="/papers/feick2022hapticpuppet/"><!-- --></a></li>
 <li><section id="citation">
-    <a href="/papers/kumar2022tourgether"><span id="kumar2022tourgether">Kartikaeya Kumar, Lev Poretski, Jiannan Li, and Anthony Tang. (2022). <span style="text-decoration: underline"> Tourgether360: Collaborative Exploration of 360 Tour Videos using Pseudo-Spatial Navigation</span>. <i>Proceedings of the ACM on Human-Computer Interaction (PACMHCI)</i>.</span>
+    <a href="/papers/kumar2022tourgether"><span id="kumar2022tourgether">Kartikaeya Kumar, Lev Poretski, Jiannan Li, and Anthony Tang. (2022). <span style="text-decoration: underline"> Tourgether360: Collaborative Exploration of 360 Tour Videos using Pseudo-Spatial Navigation</span>. <i>Proceedings of the ACM on Human-Computer Interaction (PACMHCI)</i> 6, CSCW2.</span>
 
 (conference).</a><br />
 
@@ -203,7 +263,7 @@
 	<a href="https://hcitang.org/papers/2022-cscw2022-kumar-tourgether360.mp4"><i class="fa fa-film"></i></a>
 
 
-	<a href=""><i class="fa fa-external-link"></i></a>
+	<a href="https://doi.org/10.1145/3555604"><i class="fa fa-external-link"></i></a>
 
 </section><a class="details" href="/papers/kumar2022tourgether/"><!-- --></a></li>
 <li><section id="citation">
@@ -216,9 +276,11 @@
 
 	<a href="https://hcitang.org/papers/2022-uist2022-mahedevan-mimic.pdf"><i class="fa fa-file-pdf-o"></i></a>
 
+
 	<a href="https://uist.acm.org/2022/"><i class="fa fa-sticky-note-o"></i></a>
 
-	<a href="https://hcitang.org/papers/2022-uist20220-mahedevan-mimic.mp4"><i class="fa fa-film"></i></a>
+
+	<a href="https://hcitang.org/papers/2022-uist2022-mahedevan-mimic.mp4"><i class="fa fa-film"></i></a>
 
 
 	<a href="https://doi.org/10.1145/3526113.3545639"><i class="fa fa-external-link"></i></a>
