--- a/papers/kumar2022tourgether/index.html
+++ b/papers/kumar2022tourgether/index.html
@@ -79,7 +79,7 @@
 						<h1 style="margin: 0 0 0.5em 0"> Tourgether360: Collaborative Exploration of 360 Tour Videos using Pseudo-Spatial Navigation</h1>
 
 <p style="margin: 0.5em 0 1em 0">
-<span id="kumar2022tourgether">Kartikaeya Kumar, Lev Poretski, Jiannan Li, and Anthony Tang. (2022). <span style="text-decoration: underline"> Tourgether360: Collaborative Exploration of 360 Tour Videos using Pseudo-Spatial Navigation</span>. <i>Proceedings of the ACM on Human-Computer Interaction (PACMHCI)</i>.</span>
+<span id="kumar2022tourgether">Kartikaeya Kumar, Lev Poretski, Jiannan Li, and Anthony Tang. (2022). <span style="text-decoration: underline"> Tourgether360: Collaborative Exploration of 360 Tour Videos using Pseudo-Spatial Navigation</span>. <i>Proceedings of the ACM on Human-Computer Interaction (PACMHCI)</i> 6, CSCW2.</span>
 
 
 
@@ -104,7 +104,7 @@
 	<a href="https://hcitang.org/papers/2022-cscw2022-kumar-tourgether360.mp4"><i class="fa fa-film"></i> Video (https://hcitang.org/papers/2022-cscw2022-kumar-tourgether360.mp4)</a><br/>
 
 
-	<a href=""><i class="fa fa-external-link"></i> DOI ()</a><br/>
+	<a href="https://doi.org/10.1145/3555604"><i class="fa fa-external-link"></i> DOI (https://doi.org/10.1145/3555604)</a><br/>
 
 </p>
 
@@ -115,13 +115,14 @@
 &nbsp;&nbsp;author = {Kumar, Kartikaeya and Poretski, Lev and Li, Jiannan and Tang, Anthony},<br />
 &nbsp;&nbsp;title = { Tourgether360: Collaborative Exploration of 360 Tour Videos using Pseudo-Spatial Navigation},<br />
 &nbsp;&nbsp;journal = {Proceedings of the ACM on Human-Computer Interaction (PACMHCI)},<br />
-&nbsp;&nbsp;volume = {},<br />
+&nbsp;&nbsp;volume = {6, CSCW2},<br />
+&nbsp;&nbsp;article = { 546 },<br />
 &nbsp;&nbsp;pdfurl = {https://hcitang.org/papers/2022-cscw2022-kumar-tourgether360.pdf},<br />
 &nbsp;&nbsp;videourl = {https://hcitang.org/papers/2022-cscw2022-kumar-tourgether360.mp4},<br />
 &nbsp;&nbsp;year = {2022},<br />
 &nbsp;&nbsp;type = {conference},<br />
 &nbsp;&nbsp;url = {https://uist.acm.org/2022/},<br />
-&nbsp;&nbsp;doi = {}<br />
+&nbsp;&nbsp;doi = {https://doi.org/10.1145/3555604}<br />
 }<br />
 </p>
 					</div>
