--- a/papers/li2023stargazer/index.html
+++ b/papers/li2023stargazer/index.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title> Mimic: In-Situ Recording and Re-Use of Demonstrations to Support Robot Teleoperation</title>
+		<title>Stargazer: An Interactive Camera Robot for Capturing How-To Videos Based on Subtle Instructor Cues</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -76,17 +76,17 @@
 				<div class="9u skel-cell-important">
 					<div id="content">
 						<!-- Content -->
-						<h1 style="margin: 0 0 0.5em 0"> Mimic: In-Situ Recording and Re-Use of Demonstrations to Support Robot Teleoperation</h1>
+						<h1 style="margin: 0 0 0.5em 0">Stargazer: An Interactive Camera Robot for Capturing How-To Videos Based on Subtle Instructor Cues</h1>
 
 <p style="margin: 0.5em 0 1em 0">
-<span id="mahadevan2022mimic">Karthik Mahadevan, Yan Chen, Maya Cakmak, Anthony Tang, and Tovi Grossman. (2022). <span style="text-decoration: underline"> Mimic: In-Situ Recording and Re-Use of Demonstrations to Support Robot Teleoperation</span>. In <i>UIST 2022: The 35th Annual ACM Symposium on User Interface Software and Technology</i>.</span>
+<span id="li2023stargazer">Jiannan Li, Mauricio Sousa, Karthik Mahadevan, Bryan Wang, Paula Akemi Aoyagui, Nicole Yu, Angela Yang, Ravin Balakrishnan, Anthony Tang, and Tovi Grossman. (2023). <span style="text-decoration: underline">Stargazer: An Interactive Camera Robot for Capturing How-To Videos Based on Subtle Instructor Cues</span>. In <i>CHI 2023: Proceedings of the 2023 SIGCHI Conference on Human Factors in Computing Systems</i>.</span>
 
 
 
 </p>
 
 <h2>Abstract</h2>
-<p style="margin: 0.5em 0 1em 0">Remote teleoperation is an important robot control method when they cannot operate fully autonomously. Yet, teleoperation presents challenges to effective and full robot utilization: controls are cumbersome, inefficient, and the teleoperator needs to actively attend to the robot and its environment. Inspired by end-user programming, we propose a new interaction paradigm to support robot teleoperation for combinations of repetitive and complex movements. We introduce Mimic, a system that allows teleoperators to demonstrate and save robot trajectories as templates, and re-use them to execute the same action in new situations. Templates can be re-used through (1) macros—parametrized templates assigned to and activated by buttons on the controller, and (2) programs—sequences of parametrized templates that operate autonomously. A user study in a simulated environment showed that after initial set up time, participants completed manipulation tasks faster and more easily compared to traditional direct control.</p>
+<p style="margin: 0.5em 0 1em 0">Live and pre-recorded video tutorials are an effective means for teaching physical skills such as cooking or prototyping electronics. A dedicated cameraperson following an instructor’s activities can improve production quality. However, instructors who do not have access to a cameraperson’s help often have to work within the constraints of static cameras. We present Stargazer, a novel approach for assisting with tutorial content creation with a camera robot that autonomously tracks regions of interest based on instructor actions to capture dynamic shots. Instructors can adjust the camera behaviors of Stargazer with subtle cues, including gestures and speech, allowing them to fluidly integrate camera control commands into instructional activities. Our user study with six instructors, each teaching a distinct skill, showed that participants could create dynamic tutorial videos with a diverse range of subjects, camera framing, and camera angle combinations using Stargazer.</p>
 
 <!--
 
@@ -95,32 +95,29 @@
 <h2>Materials</h2>
 <p style="margin: 0.5em 0 1em 0">
 
-	<a href="https://hcitang.org/papers/2022-uist2022-mahedevan-mimic.pdf"><i class="fa fa-file-pdf-o"></i> PDF File (https://hcitang.org/papers/2022-uist2022-mahedevan-mimic.pdf)</a><br/>
+	<a href="http://hcitang.org/papers/2023-chi2023-li-stargazer.mp4"><i class="fa fa-file-pdf-o"></i> PDF File (http://hcitang.org/papers/2023-chi2023-li-stargazer.mp4)</a><br/>
 
 
-	<a href="https://uist.acm.org/2022/"><i class="fa fa-sticky-note-o"></i> URL (https://uist.acm.org/2022/)</a><br/>
+
+	<a href="http://hcitang.org/papers/2023-chi2023-li-stargazer.mp4"><i class="fa fa-film"></i> Video (http://hcitang.org/papers/2023-chi2023-li-stargazer.mp4)</a><br/>
 
 
-	<a href="https://hcitang.org/papers/2022-uist2022-mahedevan-mimic.mp4"><i class="fa fa-film"></i> Video (https://hcitang.org/papers/2022-uist2022-mahedevan-mimic.mp4)</a><br/>
-
-
-	<a href="https://doi.org/10.1145/3526113.3545639"><i class="fa fa-external-link"></i> DOI (https://doi.org/10.1145/3526113.3545639)</a><br/>
+	<a href="https://doi.org/10.1145/3544548.3580896"><i class="fa fa-external-link"></i> DOI (https://doi.org/10.1145/3544548.3580896)</a><br/>
 
 </p>
 
 
 
 <h2>BibTeX</h2>
-<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@inproceedings{mahadevan2022mimic,<br />
-&nbsp;&nbsp;author = {Mahadevan, Karthik and Chen, Yan and Cakmak, Maya and Tang, Anthony and Grossman, Tovi},<br />
-&nbsp;&nbsp;title = { Mimic: In-Situ Recording and Re-Use of Demonstrations to Support Robot Teleoperation},<br />
-&nbsp;&nbsp;booktitle = {UIST 2022: The 35th Annual ACM Symposium on User Interface Software and Technology},<br />
-&nbsp;&nbsp;pdfurl = {https://hcitang.org/papers/2022-uist2022-mahedevan-mimic.pdf},<br />
-&nbsp;&nbsp;videourl = {https://hcitang.org/papers/2022-uist2022-mahedevan-mimic.mp4},<br />
-&nbsp;&nbsp;year = {2022},<br />
+<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@inproceedings{li2023stargazer,<br />
+&nbsp;&nbsp;author = {Li, Jiannan and Sousa, Mauricio and Mahadevan, Karthik and Wang, Bryan and Aoyagui, Paula Akemi and Yu, Nicole and Yang, Angela and Balakrishnan, Ravin and Tang, Anthony and Grossman, Tovi},<br />
+&nbsp;&nbsp;title = {Stargazer: An Interactive Camera Robot for Capturing How-To Videos Based on Subtle Instructor Cues},<br />
+&nbsp;&nbsp;booktitle = {CHI 2023: Proceedings of the 2023 SIGCHI Conference on Human Factors in Computing Systems},<br />
+&nbsp;&nbsp;year = {2023},<br />
 &nbsp;&nbsp;type = {conference},<br />
-&nbsp;&nbsp;url = {https://uist.acm.org/2022/},<br />
-&nbsp;&nbsp;doi = {https://doi.org/10.1145/3526113.3545639}<br />
+&nbsp;&nbsp;pdfurl = {http://hcitang.org/papers/2023-chi2023-li-stargazer.mp4},<br />
+&nbsp;&nbsp;videourl = {http://hcitang.org/papers/2023-chi2023-li-stargazer.mp4},<br />
+&nbsp;&nbsp;doi = {https://doi.org/10.1145/3544548.3580896}<br />
 }<br />
 </p>
 					</div>
