--- a/papers/pratte2023designspace/index.html
+++ b/papers/pratte2023designspace/index.html
@@ -102,7 +102,7 @@
 
 
 
-	<a href=""><i class="fa fa-external-link"></i> DOI ()</a><br/>
+	<a href="https://doi.org/10.1145/3569009.3573899"><i class="fa fa-external-link"></i> DOI (https://doi.org/10.1145/3569009.3573899)</a><br/>
 
 </p>
 
@@ -117,7 +117,7 @@
 &nbsp;&nbsp;url = { http://hcitang.org/papers/2023-tei2023-pratte-fashiontech-design-space-artifact-set.pdf},<br />
 &nbsp;&nbsp;year = {2023},<br />
 &nbsp;&nbsp;type = {conference},<br />
-&nbsp;&nbsp;doi = {}<br />
+&nbsp;&nbsp;doi = {https://doi.org/10.1145/3569009.3573899}<br />
 }<br />
 </p>
 					</div>
