--- a/papers/pratte2023hacklesworkshop/index.html
+++ b/papers/pratte2023hacklesworkshop/index.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title> Mimic: In-Situ Recording and Re-Use of Demonstrations to Support Robot Teleoperation</title>
+		<title> HACKLES: A Case Study on Using Data to Create Experiences with Wearables </title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -76,17 +76,17 @@
 				<div class="9u skel-cell-important">
 					<div id="content">
 						<!-- Content -->
-						<h1 style="margin: 0 0 0.5em 0"> Mimic: In-Situ Recording and Re-Use of Demonstrations to Support Robot Teleoperation</h1>
+						<h1 style="margin: 0 0 0.5em 0"> HACKLES: A Case Study on Using Data to Create Experiences with Wearables </h1>
 
 <p style="margin: 0.5em 0 1em 0">
-<span id="mahadevan2022mimic">Karthik Mahadevan, Yan Chen, Maya Cakmak, Anthony Tang, and Tovi Grossman. (2022). <span style="text-decoration: underline"> Mimic: In-Situ Recording and Re-Use of Demonstrations to Support Robot Teleoperation</span>. In <i>UIST 2022: The 35th Annual ACM Symposium on User Interface Software and Technology</i>.</span>
+<span id="pratte2023hacklesworkshop">Sydney Pratte, Anthony Tang, and Lora Oehlberg. (2023). <span style="text-decoration: underline"> HACKLES: A Case Study on Using Data to Create Experiences with Wearables </span>. In <i>CHI22 Workshop: Toolkits &amp; Wearables - Developing Toolkits for Exploring Wearable Designs</i>.</span>
 
 
 
 </p>
 
 <h2>Abstract</h2>
-<p style="margin: 0.5em 0 1em 0">Remote teleoperation is an important robot control method when they cannot operate fully autonomously. Yet, teleoperation presents challenges to effective and full robot utilization: controls are cumbersome, inefficient, and the teleoperator needs to actively attend to the robot and its environment. Inspired by end-user programming, we propose a new interaction paradigm to support robot teleoperation for combinations of repetitive and complex movements. We introduce Mimic, a system that allows teleoperators to demonstrate and save robot trajectories as templates, and re-use them to execute the same action in new situations. Templates can be re-used through (1) macros—parametrized templates assigned to and activated by buttons on the controller, and (2) programs—sequences of parametrized templates that operate autonomously. A user study in a simulated environment showed that after initial set up time, participants completed manipulation tasks faster and more easily compared to traditional direct control.</p>
+<p style="margin: 0.5em 0 1em 0">Wearable empathy tools are physical artifacts designed to help the wearer understand the lived experience of another. Designers often use data as an essential material in the creation of these tools. This work presents a case study on designing a wearable empathy tool driven by a narrative. HACKLES uses sensor data to simulate the experience of anxiety women feel when walking alone at night. We then briefly discuss engaging topics from our experience creating the design.</p>
 
 <!--
 
@@ -95,32 +95,27 @@
 <h2>Materials</h2>
 <p style="margin: 0.5em 0 1em 0">
 
-	<a href="https://hcitang.org/papers/2022-uist2022-mahedevan-mimic.pdf"><i class="fa fa-file-pdf-o"></i> PDF File (https://hcitang.org/papers/2022-uist2022-mahedevan-mimic.pdf)</a><br/>
+	<a href=" 2023-chi2023workshop-pratte-hackles.pdf"><i class="fa fa-file-pdf-o"></i> PDF File ( 2023-chi2023workshop-pratte-hackles.pdf)</a><br/>
 
 
-	<a href="https://uist.acm.org/2022/"><i class="fa fa-sticky-note-o"></i> URL (https://uist.acm.org/2022/)</a><br/>
+	<a href="https://materialfordesign.net/chi2023_workshop/"><i class="fa fa-sticky-note-o"></i> URL (https://materialfordesign.net/chi2023_workshop/)</a><br/>
 
 
-	<a href="https://hcitang.org/papers/2022-uist2022-mahedevan-mimic.mp4"><i class="fa fa-film"></i> Video (https://hcitang.org/papers/2022-uist2022-mahedevan-mimic.mp4)</a><br/>
-
-
-	<a href="https://doi.org/10.1145/3526113.3545639"><i class="fa fa-external-link"></i> DOI (https://doi.org/10.1145/3526113.3545639)</a><br/>
 
 </p>
 
 
 
 <h2>BibTeX</h2>
-<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@inproceedings{mahadevan2022mimic,<br />
-&nbsp;&nbsp;author = {Mahadevan, Karthik and Chen, Yan and Cakmak, Maya and Tang, Anthony and Grossman, Tovi},<br />
-&nbsp;&nbsp;title = { Mimic: In-Situ Recording and Re-Use of Demonstrations to Support Robot Teleoperation},<br />
-&nbsp;&nbsp;booktitle = {UIST 2022: The 35th Annual ACM Symposium on User Interface Software and Technology},<br />
-&nbsp;&nbsp;pdfurl = {https://hcitang.org/papers/2022-uist2022-mahedevan-mimic.pdf},<br />
-&nbsp;&nbsp;videourl = {https://hcitang.org/papers/2022-uist2022-mahedevan-mimic.mp4},<br />
-&nbsp;&nbsp;year = {2022},<br />
-&nbsp;&nbsp;type = {conference},<br />
-&nbsp;&nbsp;url = {https://uist.acm.org/2022/},<br />
-&nbsp;&nbsp;doi = {https://doi.org/10.1145/3526113.3545639}<br />
+<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@inproceedings{pratte2023hacklesworkshop,<br />
+&nbsp;&nbsp;author = {Pratte, Sydney and Tang, Anthony and Oehlberg, Lora},<br />
+&nbsp;&nbsp;title = { HACKLES: A Case Study on Using Data to Create Experiences with Wearables },<br />
+&nbsp;&nbsp;booktitle = {CHI22 Workshop: Toolkits & Wearables - Developing Toolkits for Exploring Wearable Designs},<br />
+&nbsp;&nbsp;editor = {Lee-Smith, Matthew and Benjamin, Jesse Josua and Desjardins, Audrey and Funk, Mathias and Odom, William and Oogjes, Doenja and Park, Young-Woo and Pierce, James and Sanches, Pedro and Tsaknaki, Vasiliki},<br />
+&nbsp;&nbsp;pdfurl = { 2023-chi2023workshop-pratte-hackles.pdf},<br />
+&nbsp;&nbsp;year = {2023},<br />
+&nbsp;&nbsp;type = {workshop},<br />
+&nbsp;&nbsp;url = {https://materialfordesign.net/chi2023_workshop/}<br />
 }<br />
 </p>
 					</div>
