--- a/papers/stark2023fictionworkshop/index.html
+++ b/papers/stark2023fictionworkshop/index.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title> Mimic: In-Situ Recording and Re-Use of Demonstrations to Support Robot Teleoperation</title>
+		<title> Can AI Support Fiction Writers Without Writing For Them? </title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -76,17 +76,17 @@
 				<div class="9u skel-cell-important">
 					<div id="content">
 						<!-- Content -->
-						<h1 style="margin: 0 0 0.5em 0"> Mimic: In-Situ Recording and Re-Use of Demonstrations to Support Robot Teleoperation</h1>
+						<h1 style="margin: 0 0 0.5em 0"> Can AI Support Fiction Writers Without Writing For Them? </h1>
 
 <p style="margin: 0.5em 0 1em 0">
-<span id="mahadevan2022mimic">Karthik Mahadevan, Yan Chen, Maya Cakmak, Anthony Tang, and Tovi Grossman. (2022). <span style="text-decoration: underline"> Mimic: In-Situ Recording and Re-Use of Demonstrations to Support Robot Teleoperation</span>. In <i>UIST 2022: The 35th Annual ACM Symposium on User Interface Software and Technology</i>.</span>
+<span id="stark2023fictionworkshop">Jessi Stark, Anthony Tang, Young-Ho Kim, Joonsuk Park, and Daniel Wigdor. (2023). <span style="text-decoration: underline"> Can AI Support Fiction Writers Without Writing For Them? </span>. In <i>CHI23 Workshop: In2Writing - The Second Workshop on Intelligent and Interactive Writing Assistants</i>.</span>
 
 
 
 </p>
 
 <h2>Abstract</h2>
-<p style="margin: 0.5em 0 1em 0">Remote teleoperation is an important robot control method when they cannot operate fully autonomously. Yet, teleoperation presents challenges to effective and full robot utilization: controls are cumbersome, inefficient, and the teleoperator needs to actively attend to the robot and its environment. Inspired by end-user programming, we propose a new interaction paradigm to support robot teleoperation for combinations of repetitive and complex movements. We introduce Mimic, a system that allows teleoperators to demonstrate and save robot trajectories as templates, and re-use them to execute the same action in new situations. Templates can be re-used through (1) macros—parametrized templates assigned to and activated by buttons on the controller, and (2) programs—sequences of parametrized templates that operate autonomously. A user study in a simulated environment showed that after initial set up time, participants completed manipulation tasks faster and more easily compared to traditional direct control.</p>
+<p style="margin: 0.5em 0 1em 0">The HCI community has intensively explored the employment of AIs in story generation. However, creative writers may have mixed perceptions about their ownership of the story when there are significant AI contributions. We explore opportunities for AIs to support fiction writers without compromising their feeling of story ownership. In this paper, we present preliminary results of a formative interview study with fiction writers (𝑁 = 9), focusing on their practice and the challenges of the story-writing process. We discuss some of the challenges these writers face and propose design opportunities to address these challenges in ways other than text generation.</p>
 
 <!--
 
@@ -95,32 +95,27 @@
 <h2>Materials</h2>
 <p style="margin: 0.5em 0 1em 0">
 
-	<a href="https://hcitang.org/papers/2022-uist2022-mahedevan-mimic.pdf"><i class="fa fa-file-pdf-o"></i> PDF File (https://hcitang.org/papers/2022-uist2022-mahedevan-mimic.pdf)</a><br/>
+	<a href=" 2023-chi2023workshop-stark-fiction-writers.pdf"><i class="fa fa-file-pdf-o"></i> PDF File ( 2023-chi2023workshop-stark-fiction-writers.pdf)</a><br/>
 
 
-	<a href="https://uist.acm.org/2022/"><i class="fa fa-sticky-note-o"></i> URL (https://uist.acm.org/2022/)</a><br/>
+	<a href="https://in2writing.glitch.me/"><i class="fa fa-sticky-note-o"></i> URL (https://in2writing.glitch.me/)</a><br/>
 
 
-	<a href="https://hcitang.org/papers/2022-uist2022-mahedevan-mimic.mp4"><i class="fa fa-film"></i> Video (https://hcitang.org/papers/2022-uist2022-mahedevan-mimic.mp4)</a><br/>
-
-
-	<a href="https://doi.org/10.1145/3526113.3545639"><i class="fa fa-external-link"></i> DOI (https://doi.org/10.1145/3526113.3545639)</a><br/>
 
 </p>
 
 
 
 <h2>BibTeX</h2>
-<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@inproceedings{mahadevan2022mimic,<br />
-&nbsp;&nbsp;author = {Mahadevan, Karthik and Chen, Yan and Cakmak, Maya and Tang, Anthony and Grossman, Tovi},<br />
-&nbsp;&nbsp;title = { Mimic: In-Situ Recording and Re-Use of Demonstrations to Support Robot Teleoperation},<br />
-&nbsp;&nbsp;booktitle = {UIST 2022: The 35th Annual ACM Symposium on User Interface Software and Technology},<br />
-&nbsp;&nbsp;pdfurl = {https://hcitang.org/papers/2022-uist2022-mahedevan-mimic.pdf},<br />
-&nbsp;&nbsp;videourl = {https://hcitang.org/papers/2022-uist2022-mahedevan-mimic.mp4},<br />
-&nbsp;&nbsp;year = {2022},<br />
-&nbsp;&nbsp;type = {conference},<br />
-&nbsp;&nbsp;url = {https://uist.acm.org/2022/},<br />
-&nbsp;&nbsp;doi = {https://doi.org/10.1145/3526113.3545639}<br />
+<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@inproceedings{stark2023fictionworkshop,<br />
+&nbsp;&nbsp;author = {Stark, Jessi and Tang, Anthony and Kim, Young-Ho and Park, Joonsuk and Wigdor, Daniel},<br />
+&nbsp;&nbsp;title = { Can AI Support Fiction Writers Without Writing For Them? },<br />
+&nbsp;&nbsp;booktitle = {CHI23 Workshop: In2Writing - The Second Workshop on Intelligent and Interactive Writing Assistants},<br />
+&nbsp;&nbsp;editor = {Gero, Katy Ilonka and Chang, Minsuk and Huang, Ting-Hao 'Kenneth' and Chung, John Joon Young and Raheja, Vipul and Wambsganss, Thiemo and Kang, Dongyeop and Lee, Mina},<br />
+&nbsp;&nbsp;pdfurl = { 2023-chi2023workshop-stark-fiction-writers.pdf},<br />
+&nbsp;&nbsp;year = {2023},<br />
+&nbsp;&nbsp;type = {workshop},<br />
+&nbsp;&nbsp;url = {https://in2writing.glitch.me/}<br />
 }<br />
 </p>
 					</div>
