updated with new projects

--- a/papers/byType.html
+++ b/papers/byType.html
@@ -471,7 +471,7 @@
 	<a href="https://hcitang.org/papers/2022-cscw2022-kumar-tourgether360.pdf"><i class="fa fa-file-pdf-o"></i></a>
 
 
-	<a href="https://uist.acm.org/2022/"><i class="fa fa-sticky-note-o"></i></a>
+	<a href="https://cscw.acm.org/2022/"><i class="fa fa-sticky-note-o"></i></a>
 
 
 	<a href="https://hcitang.org/papers/2022-cscw2022-kumar-tourgether360.mp4"><i class="fa fa-film"></i></a>
@@ -3139,7 +3139,7 @@
 
 <h1><a name="Techreport"></a>Techreport</h1>
 <ol class="bibliography"><li><section id="citation">
-    <a href="/papers/feick2020tangj"><span id="feick2020tangj">Martin Feick, Scott Bateman, Anthony Tang, André Miede, and Nicolai Marquardt. (2020). <i>TanGi: Tangible Proxies for Embodied Object Exploration and Manipulation in Virtual Reality</i>. arXiv.</span>
+    <a href="/papers/feick2020tangitr"><span id="feick2020tangitr">Martin Feick, Scott Bateman, Anthony Tang, André Miede, and Nicolai Marquardt. (2020). <i>TanGi: Tangible Proxies for Embodied Object Exploration and Manipulation in Virtual Reality</i>. arXiv.</span>
 
 (techreport).</a><br />
 
@@ -3151,7 +3151,7 @@
 
 
 
-</section><a class="details" href="/papers/feick2020tangj/"><!-- --></a></li>
+</section><a class="details" href="/papers/feick2020tangitr/"><!-- --></a></li>
 <li><section id="citation">
     <a href="/papers/fakourfar2016sciencerap"><span id="fakourfar2016sciencerap">Omid Fakourfar, Edward Tse, Michael Boyle, and Anthony Tang. (2016). <i>A Software Tool to Greately Reduce the Instructional Time Needed to Implement the Science Genius Rap Programme</i>. Department of Computer Science, University of Calgary.</span>
 
