--- a/papers/feick2020tangitr/index.html
+++ b/papers/feick2020tangitr/index.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title> Tourgether360: Collaborative Exploration of 360 Tour Videos using Pseudo-Spatial Navigation</title>
+		<title>TanGi: Tangible Proxies for Embodied Object Exploration and Manipulation in Virtual Reality</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -76,17 +76,17 @@
 				<div class="9u skel-cell-important">
 					<div id="content">
 						<!-- Content -->
-						<h1 style="margin: 0 0 0.5em 0"> Tourgether360: Collaborative Exploration of 360 Tour Videos using Pseudo-Spatial Navigation</h1>
+						<h1 style="margin: 0 0 0.5em 0">TanGi: Tangible Proxies for Embodied Object Exploration and Manipulation in Virtual Reality</h1>
 
 <p style="margin: 0.5em 0 1em 0">
-<span id="kumar2022tourgether">Kartikaeya Kumar, Lev Poretski, Jiannan Li, and Anthony Tang. (2022). <span style="text-decoration: underline"> Tourgether360: Collaborative Exploration of 360 Tour Videos using Pseudo-Spatial Navigation</span>. <i>Proceedings of the ACM on Human-Computer Interaction (PACMHCI)</i> 6, CSCW2.</span>
+<span id="feick2020tangitr">Martin Feick, Scott Bateman, Anthony Tang, André Miede, and Nicolai Marquardt. (2020). <i>TanGi: Tangible Proxies for Embodied Object Exploration and Manipulation in Virtual Reality</i>. arXiv.</span>
 
 
 
 </p>
 
 <h2>Abstract</h2>
-<p style="margin: 0.5em 0 1em 0">Remote teleoperation is an important robot control method when they cannot operate fully autonomously. Yet, teleoperation presents challenges to effective and full robot utilization: controls are cumbersome, inefficient, and the teleoperator needs to actively attend to the robot and its environment. Inspired by end-user programming, we propose a new interaction paradigm to support robot teleoperation for combinations of repetitive and complex movements. We introduce Mimic, a system that allows teleoperators to demonstrate and save robot trajectories as templates, and re-use them to execute the same action in new situations. Templates can be re-used through (1) macros—parametrized templates assigned to and activated by buttons on the controller, and (2) programs—sequences of parametrized templates that operate autonomously. A user study in a simulated environment showed that after initial set up time, participants completed manipulation tasks faster and more easily compared to traditional direct control.</p>
+<p style="margin: 0.5em 0 1em 0">Exploring and manipulating complex virtual objects is challenging due to limitations of conventional controllers and free-hand interaction techniques. We present the TanGi toolkit which enables novices to rapidly build physical proxy objects using Composable Shape Primitives. TanGi also provides Manipulators allowing users to build objects including movable parts, making them suitable for rich object exploration and manipulation in VR. With a set of different use cases and applications we show the capabilities of the TanGi toolkit, and evaluate its use. In a study with 16 participants, we demonstrate that novices can quickly build physical proxy objects using the Composable Shape Primitives, and explore how different levels of object embodiment affect virtual object exploration. In a second study with 12 participants we evaluate TanGi’s Manipulators, and investigate the effectiveness of embodied interaction. Findings from this study show that TanGi’s proxies outperform traditional controllers, and were generally favored by participants.</p>
 
 <!--
 
@@ -95,34 +95,24 @@
 <h2>Materials</h2>
 <p style="margin: 0.5em 0 1em 0">
 
-	<a href="https://hcitang.org/papers/2022-cscw2022-kumar-tourgether360.pdf"><i class="fa fa-file-pdf-o"></i> PDF File (https://hcitang.org/papers/2022-cscw2022-kumar-tourgether360.pdf)</a><br/>
+
+	<a href="https://arxiv.org/abs/2001.03021"><i class="fa fa-sticky-note-o"></i> URL (https://arxiv.org/abs/2001.03021)</a><br/>
 
 
-	<a href="https://cscw.acm.org/2022/"><i class="fa fa-sticky-note-o"></i> URL (https://cscw.acm.org/2022/)</a><br/>
-
-
-	<a href="https://hcitang.org/papers/2022-cscw2022-kumar-tourgether360.mp4"><i class="fa fa-film"></i> Video (https://hcitang.org/papers/2022-cscw2022-kumar-tourgether360.mp4)</a><br/>
-
-
-	<a href="https://doi.org/10.1145/3555604"><i class="fa fa-external-link"></i> DOI (https://doi.org/10.1145/3555604)</a><br/>
 
 </p>
 
 
 
 <h2>BibTeX</h2>
-<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@article{kumar2022tourgether,<br />
-&nbsp;&nbsp;author = {Kumar, Kartikaeya and Poretski, Lev and Li, Jiannan and Tang, Anthony},<br />
-&nbsp;&nbsp;title = { Tourgether360: Collaborative Exploration of 360 Tour Videos using Pseudo-Spatial Navigation},<br />
-&nbsp;&nbsp;journal = {Proceedings of the ACM on Human-Computer Interaction (PACMHCI)},<br />
-&nbsp;&nbsp;volume = {6, CSCW2},<br />
-&nbsp;&nbsp;article = { 546 },<br />
-&nbsp;&nbsp;pdfurl = {https://hcitang.org/papers/2022-cscw2022-kumar-tourgether360.pdf},<br />
-&nbsp;&nbsp;videourl = {https://hcitang.org/papers/2022-cscw2022-kumar-tourgether360.mp4},<br />
-&nbsp;&nbsp;year = {2022},<br />
-&nbsp;&nbsp;type = {conference},<br />
-&nbsp;&nbsp;url = {https://cscw.acm.org/2022/},<br />
-&nbsp;&nbsp;doi = {https://doi.org/10.1145/3555604}<br />
+<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@techreport{feick2020tangitr,<br />
+&nbsp;&nbsp;author = {Feick, Martin and Bateman, Scott and Tang, Anthony and Miede, André and Marquardt, Nicolai},<br />
+&nbsp;&nbsp;title = {TanGi: Tangible Proxies for Embodied Object Exploration and Manipulation in Virtual Reality},<br />
+&nbsp;&nbsp;year = {2020},<br />
+&nbsp;&nbsp;number = {2001.03021 [cs.HC]},<br />
+&nbsp;&nbsp;publisher = {arXiv},<br />
+&nbsp;&nbsp;type = {techreport},<br />
+&nbsp;&nbsp;url = {https://arxiv.org/abs/2001.03021}<br />
 }<br />
 </p>
 					</div>
