--- a/papers/index.html
+++ b/papers/index.html
@@ -257,7 +257,7 @@
 	<a href="https://hcitang.org/papers/2022-cscw2022-kumar-tourgether360.pdf"><i class="fa fa-file-pdf-o"></i></a>
 
 
-	<a href="https://uist.acm.org/2022/"><i class="fa fa-sticky-note-o"></i></a>
+	<a href="https://cscw.acm.org/2022/"><i class="fa fa-sticky-note-o"></i></a>
 
 
 	<a href="https://hcitang.org/papers/2022-cscw2022-kumar-tourgether360.mp4"><i class="fa fa-film"></i></a>
@@ -805,7 +805,7 @@
 
 </section><a class="details" href="/papers/anjani2020mukbang/"><!-- --></a></li>
 <li><section id="citation">
-    <a href="/papers/feick2020tangj"><span id="feick2020tangj">Martin Feick, Scott Bateman, Anthony Tang, André Miede, and Nicolai Marquardt. (2020). <i>TanGi: Tangible Proxies for Embodied Object Exploration and Manipulation in Virtual Reality</i>. arXiv.</span>
+    <a href="/papers/feick2020tangitr"><span id="feick2020tangitr">Martin Feick, Scott Bateman, Anthony Tang, André Miede, and Nicolai Marquardt. (2020). <i>TanGi: Tangible Proxies for Embodied Object Exploration and Manipulation in Virtual Reality</i>. arXiv.</span>
 
 (techreport).</a><br />
 
@@ -817,7 +817,7 @@
 
 
 
-</section><a class="details" href="/papers/feick2020tangj/"><!-- --></a></li>
+</section><a class="details" href="/papers/feick2020tangitr/"><!-- --></a></li>
 <li><section id="citation">
     <a href="/papers/stark2020thesis"><span id="stark2020thesis">Jessica Theresa Stark. (2020). <span style="text-decoration: underline">Redesigning instructional tools for novice makers</span>. </span>
 
